<resources>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign_Up</string>
    <string name="user_sign_up">Sign Up</string>
    <string name="enter_username">"Enter Username "</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_now">Register Now!</string>
    <string name="already_registered">Already Registered?  Login Here!</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_username_2">Enter Username</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password2">Enter Password (6 Characters min.)</string>
    <string name="app_name">SolaRise</string>
    <string name="request">Request</string>
    <string name="locate">Locate</string>
    <string name="sunset">Sunset\n6:00PM</string>
    <string name="sunrise">Sunrise\n6:00AM</string>
    <string name="sleep_query">How was your sleep?</string>
    <string name="home_button">HOME</string>
    <string name="settings_button">SETTINGS</string>
    <string name="submit">Submit</string>
    <string name="logout_button">Logout</string>
    <string name="sunsetTime">TextView</string>
    <string name="early_bird">Early Bird</string>
    <string name="night_owl">Night Owl</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="caffeine">Average Coffee Intake (cups)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="s" />
    <string name="my_name">My Name:</string>
    <string name="ss">Sleep Preference</string>
    <string name="sleep_pref">Sleep Pref:</string>
    <string name="sss">Age</string>
    <string name="display_age">Age:</string>
    <string name="display_coffee">Avg. Coffee Cups</string>
    <string name="avg_cof">Avg Coffee Cups:</string>
    <string name="sleep_start_time">%1$02d:%2$02d</string>
    <string name="sleep_calculator">Sleep Calculator</string>
    <string name="i_wish_to_sleep">I Wish To Sleep At</string>
    <string name="i_wish_to_wake">I Wish To Wake Up At</string>
    <string name="calculate">Calculate</string>
    <string name="enter_time">Enter Time (e.g. 9:30)</string>
    <string name="calc_age">Enter_Age</string>
    <string name="calc_age2">Enter Age</string>
    <string name="recommendations">Recommendations</string>
    <string name="dashboard">Dashboard</string>
</resources>